Fix scrollbars

--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -125,7 +125,7 @@ button { border-radius: var(--roundness) !important; }
 .guildsWrapper-5TJh6A .guilds-1q_RqH .guild.selected-ML3OIq .guildInner-3DSoA4,
 .guildsWrapper-5TJh6A .guilds-1q_RqH .guild.active .guildInner-3DSoA4 { opacity: 1; transition: opacity .25s; }
 .guildsWrapper-5TJh6A .guilds-1q_RqH .guild.selected-ML3OIq:before { border-radius: var(--roundness); }
-.guildsWrapper-5TJh6A .scroller-wrap { width: 90px; }
+.guildsWrapper-5TJh6A .da-scrollerWrap { width: 90px; }
 .theme-dark .guildsWrapper-5TJh6A { background:var(--transparency-darker) }
 .theme-light .guildsWrapper-5TJh6A { background:var(--transparency-lighter) }
 .theme-light .guildsWrapper-5TJh6A .guilds-1q_RqH .guild.selected-ML3OIq:before { background: black; }
@@ -296,7 +296,7 @@ button { border-radius: var(--roundness) !important; }
 /*Messages*/
 .containerCozy-jafyvG {
 	background-color: var(--transparency);
-	margin: 10px 1px 0 0;
+	margin: 10px 0 0 0;
 	border-radius: var(--roundness);
 	box-shadow: none;
 	height: auto;
@@ -529,10 +529,10 @@ button { border-radius: var(--roundness) !important; }
 .privateChannels-1nO12o .channel-2QD9_O .avatar-small {
 	margin-left: 1px;
 }
-.scroller-2FKFPG > [style*="width: 100%; height: 20px;"] {
+[style*="width: 100%; height: 20px;"], [style*="width: 100%; height: 8px;"] {
 	height: 0px !important
 }
-.scroller-2FKFPG header { margin-top: 20px; }
+.da-scroller header { margin-top: 20px; }
 
 .da-status, .da-friendsAction, .da-tabBar .da-item, .da-badge { border-radius: var(--roundness) !important; }
 .status.status-typing { justify-content: center; right: -11px !important; width: 26px !important; }
@@ -908,21 +908,18 @@ border-radius: var(--roundness);
 }
 
 /*Scrollbar*/
-.scroller-wrap .scroller::-webkit-scrollbar {
+.da-scrollerWrap .da-scroller::-webkit-scrollbar {
 	width: 10px;
 }
-.scroller-wrap .scroller::-webkit-scrollbar-thumb {
-	border: 0px solid rgba(0,0,0,0) !important;
+.da-scrollerWrap .da-scroller::-webkit-scrollbar-thumb {
+	border: none !important;
 	background-color: var(--accent-color) !important;
 	border-radius: var(--roundness) !important;
 }
-.theme-dark .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+.theme-dark .da-scrollerWrap .da-scroller::-webkit-scrollbar-track-piece {
 	background-color: rgba(0,0,0,0.3) !important;
+	border: none !important;
 }
-.theme-light .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
-	background-color: rgba(255,255,255,0.3) !important;
-}
-.scroller { margin-right: -1px !important }
 .theme-dark .inner-zqa7da {
 	background-color: var(--transparency);
 }
@@ -1489,7 +1486,7 @@ border-radius: var(--roundness);
 	margin-left: -103px;
 }
 
-.scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+.da-scrollerWrap .da-scroller::-webkit-scrollbar-track-piece {
 	border: none;
 	background: inherit;
 }
